Update script.functions.sh
Fix java runtime options